legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr59401-1.c-4.8.2-1.out.txt
pr59401-1.c: In function ‘test_00’:
pr59401-1.c:15:62: error: __builtin_thread_pointer is not supported on this target
   tcb_t* tcb = (a & 5) ? (tcb_t*)__builtin_thread_pointer () : b;
                                                              ^
